# unifi-toolkit

./: CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  reset_password.sh
.github/workflows/: lint.yml  test.yml
alembic/versions/: 20251205_2208_9ded46fa11ea_add_wired_device_support_to_wi_fi_.py
app/: __init__.py  main.py
app/routers/: config.py
app/static/css/: dashboard.css
app/templates/: dashboard.html
docs/: INSTALLATION.md  QUICKSTART.md
shared/: __init__.py  crypto.py  unifi_client.py
tools/threat_watch/: main.py
tools/threat_watch/static/css/: styles.css
tools/threat_watch/templates/: index.html
tools/wifi_stalker/: __init__.py  database.py  models.py  scheduler.py
tools/wifi_stalker/routers/: devices.py
tools/wifi_stalker/static/css/: styles.css
tools/wifi_stalker/templates/: index.html
