[project]
name = "unifi-toolkit"
version = "1.8.1"
description = "A suite of tools for UniFi network management"
authors = [{name = "Crosstalk Solutions"}]
requires-python = ">=3.12"
license = {text = "MIT"}
readme = "README.md"

[project.urls]
Homepage = "https://github.com/Crosstalk-Solutions/unifi-toolkit"
Documentation = "https://github.com/Crosstalk-Solutions/unifi-toolkit/blob/main/README.md"
Repository = "https://github.com/Crosstalk-Solutions/unifi-toolkit"
Issues = "https://github.com/Crosstalk-Solutions/unifi-toolkit/issues"

[tool.black]
line-length = 100
target-version = ['py312', 'py313']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-mock>=3.15.1",
]
